<resources>
    <string name="app_name">MeetCal</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeText">Vítejte v aplikaci MeetCal</string>
    <string name="buttonLogin">Přihlásit se</string>
    <string name="buttonRegistration">Zaregistrovat se</string>
    <string name="title_activity_login">MeetCal</string>
    <string name="login">Přihlášení</string>
    <string name="registration">Registrace</string>
    <string name="emai">E-mail:</string>
    <string name="password">Heslo:</string>
    <string name="title_activity_registration">MeetCal</string>
    <string name="name">Jméno:</string>
    <string name="title_activity_events">MeetCal</string>
</resources>
